# users-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4a351b087a3b_create_users_table.py
app/: main.py  tasks.py
app/core/: celery_app.py  config.py  database.py  email.py  exceptions.py  security.py
app/modules/auth/: dependencies.py  router.py  schemas.py  service.py
app/modules/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
docs/superpowers/plans/: 2026-07-15-users-api.md
docs/superpowers/specs/: 2026-07-15-users-api-design.md
scripts/: create_admin.py
tests/: conftest.py  test_auth.py  test_cleanup.py  test_config.py  test_health.py  test_models.py  test_security.py  test_users.py
